infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: reward.com
      http:
        paths:
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authorisation-srv
                port:
                  number: 4000
          - path: /api/v1/employees/?(.*)
            pathType: Prefix
            backend:
              service:
                name: employee-srv
                port:
                  number: 5000
          - path: /api/v1/projects/?(.*)
            pathType: Prefix
            backend:           
              service:
                name: project-srv
                port:
                  number: 6000
          - path: /api/v1/tasks/?(.*)
            pathType: Prefix
            backend:           
              service:
                name: task-srv
                port:
                  number: 7000
